--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-#.env
-#node_modules
+# Node.js dependencies
+node_modules/
+
+# Environment variables
+.env
+
+# Log files
+*.log
+npm-debug.log*
+
+# Build artifacts
+build/
+dist/
