--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.991.0",
+    "@upstash/redis": "^1.36.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
@@ -22,6 +23,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "pg": "^8.18.0",
+    "redis": "^5.11.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
